# mock-fin-utility-app

./: .gitignore  README.md  app.py  config.py  db_connection_verify.py  models.py  pyproject.toml  requirements.txt  test_RAG.py  test_gen_embedding.py  test_pinecone.py  web.config  zarchive_gpt.py
.github/workflows/: jerrod_azure_rag_00_ragforppas.yml
finenv/: pyvenv.cfg
finenv/Scripts/: activate  activate.bat
routes/: debt.py  ferc.py  gpt.py  proforma.py
scripts/: data_simulation.py  generate_embeddings.py  load_data.py
templates/: index.html  query_interface.html
utils/: data_loader.py  embedding_utils.py  pinecone_utils.py
